# fr-survery

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb
scripts/: download_models.py  run_benchmark.py
src/fr_survey/: dataset.py  detector.py  evaluate.py  plot.py
src/fr_survey/models/: auraface.py  base.py  deepface_ghost.py  dlib_resnet.py  opencv_sface.py
